<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTertiary"
    android:padding="@dimen/padding"
    android:id="@+id/addAttractionFragment"
    tools:context=".fragments.AddAttractionFragment">


    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_attraction_fragment_name_hint_eng"
        android:inputType="text"
        android:layout_marginTop="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_county"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_attraction_fragment_county_eng"
        android:layout_marginTop="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_name" />

    <Spinner
        android:id="@+id/county_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_county" />

    <TextView
        android:id="@+id/textView_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_attraction_fragment_city_eng"
        android:layout_marginTop="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/county_spinner" />

    <Spinner
        android:id="@+id/city_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_city" />

    <EditText
        android:id="@+id/editText_lat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_attraction_fragment_lat_hint_eng"
        android:inputType="numberDecimal"
        android:layout_marginTop="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_spinner" />

    <EditText
        android:id="@+id/editText_long"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_attraction_fragment_long_hint_eng"
        android:inputType="numberDecimal"
        android:layout_marginTop="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_lat" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_long">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb1"
            android:text="@string/add_attraction_fragment_rb1_eng" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb2"
            android:text="@string/add_attraction_fragment_rb2_eng" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb3"
            android:text="@string/add_attraction_fragment_rb3_eng" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb4"
            android:text="@string/add_attraction_fragment_rb4_eng" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb5"
            android:text="@string/add_attraction_fragment_rb5_eng" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb6"
            android:text="@string/add_attraction_fragment_rb6_eng" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb7"
            android:text="@string/add_attraction_fragment_rb7_eng" />
    </RadioGroup>

    <EditText
        android:id="@+id/editText_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_attraction_fragment_description_hint_eng"
        android:inputType="text"
        android:layout_marginTop="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:elevation="@dimen/add_attraction_button_elevation"
        android:focusable="true"
        android:src="@drawable/ic_baseline_add_24"
        android:tint="@color/colorWhite"
        app:elevation="@dimen/add_attraction_button_elevation"
        android:layout_marginTop="@dimen/bigPadding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_description" />


</androidx.constraintlayout.widget.ConstraintLayout>